# rustcdc

./: .dockerignore  .gitignore  BENCHMARK_REPORT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: benchmark-baseline-refresh.yml  ci.yml  publish.yml
benches/: cdc_perf.rs  quality_perf.rs
docs/: README.md  adapter_sdk.md  api.md  architecture.md  config_reference.md  deployment.md  documentation.md  feature_policy.md  getting_started.md  library_parity_matrix.md  reliability_testing.md  runbook.md  schema_evolution.md  troubleshooting.md  wasm_conformance_contract.md  wasm_transform_sdk.md
examples/: mariadb_to_stdout.rs  pg_to_stdout.rs  postgres_to_otel.rs  regex_filter_transform.rs  sqlserver_to_otel.rs  uppercase_transform.rs
fixtures/compatibility/: checkpoint_mysql.json  checkpoint_mysql_snapshot.json  checkpoint_mysql_snapshot_v2.json  checkpoint_mysql_v2.json  checkpoint_postgres.json  checkpoint_postgres_snapshot.json  checkpoint_postgres_snapshot_v2.json  checkpoint_postgres_v2.json  checkpoint_sqlserver.json  checkpoint_sqlserver_snapshot.json  checkpoint_sqlserver_snapshot_v2.json  checkpoint_sqlserver_v2.json  event_envelope.json
fixtures/deterministic_replay/: mysql_crash_interrupted_transaction_v1.fixture.json  mysql_crash_interrupted_transaction_v1.golden.json  mysql_ddl_dotted_identifier_v1.fixture.json  mysql_ddl_dotted_identifier_v1.golden.json  mysql_ddl_escaped_relation_name_v1.fixture.json  mysql_ddl_escaped_relation_name_v1.golden.json  mysql_ddl_mixed_alter_v1.fixture.json  mysql_ddl_mixed_alter_v1.golden.json  mysql_ddl_mixed_escaped_identifier_v1.fixture.json  mysql_ddl_mixed_escaped_identifier_v1.golden.json  mysql_ddl_mixed_ordered_quoted_v1.fixture.json  mysql_ddl_mixed_ordered_quoted_v1.golden.json  mysql_ddl_mixed_quoted_identifiers_v1.fixture.json  mysql_ddl_mixed_quoted_identifiers_v1.golden.json  mysql_ddl_unsupported_partition_v1.fixture.json  mysql_ddl_unsupported_partition_v1.golden.json  mysql_ddl_unsupported_storage_quoted_v1.fixture.json  mysql_ddl_unsupported_storage_quoted_v1.golden.json  mysql_ddl_unsupported_storage_v1.fixture.json  mysql_ddl_unsupported_storage_v1.golden.json  mysql_live_capture_v1.fixture.json  mysql_live_capture_v1.golden.json  mysql_long_transaction_schema_evolution_v1.fixture.json  mysql_long_transaction_schema_evolution_v1.golden.json  mysql_resumed_post_crash_v1.fixture.json  mysql_resumed_post_crash_v1.golden.json  mysql_transaction_rollback_v1.fixture.json  mysql_transaction_rollback_v1.golden.json  postgres_crash_interrupted_transaction_v1.fixture.json  postgres_crash_interrupted_transaction_v1.golden.json  postgres_ddl_dotted_identifier_v1.fixture.json  postgres_ddl_dotted_identifier_v1.golden.json  postgres_ddl_escaped_relation_name_v1.fixture.json  postgres_ddl_escaped_relation_name_v1.golden.json  postgres_ddl_mixed_escaped_identifier_v1.fixture.json  postgres_ddl_mixed_escaped_identifier_v1.golden.json  postgres_ddl_mixed_quoted_identifiers_v1.fixture.json  postgres_ddl_mixed_quoted_identifiers_v1.golden.json  postgres_ddl_unsupported_alter_v1.fixture.json  postgres_ddl_unsupported_alter_v1.golden.json  (+40 more)
fixtures/wasm/: filter_out_all.wat  pass_through.wat
proto/: event.proto
schemas/: event.avsc
scripts/: ci-benchmark-gate.sh  ci-doc-contract.sh  ci-doc-links.sh  ci-hygiene-gate.sh  ci-latency-gate.sh  ci-policy-gate.sh  ci-preflight.sh  ci-pull-postgres-images.sh  ci-pull-relational-images.sh  run_benchmark_report.sh  run_benchmarks.sh  run_full_integration_matrix_evidence.sh  run_integration_evidence.sh  run_latency_evidence.sh  run_quality_benchmarks.sh  runbook-force-reset-checklist.sh  validate-no-async-trait.sh
src/: lib.rs
src/checkpoint/: barrier.rs  mod.rs  owner_lease.rs  postgres.rs
src/codec/: avro.rs  cloudevents.rs  json.rs  mod.rs  protobuf.rs
src/core/: column_filter.rs  error.rs  event.rs  idempotency.rs  logging.rs  mod.rs  observability.rs  otel.rs  runtime.rs  runtime_offsets.rs  runtime_utils.rs  secret.rs  transport.rs
src/ddl_capture/: mod.rs  mysql.rs  parsing.rs  postgres.rs  sqlserver.rs  tests.rs
src/deterministic_replay/: diff.rs  fixtures.rs  mod.rs  replay.rs
src/fault_injection/: checkpoint.rs  crash.rs  data_loss.rs  mod.rs  source.rs
src/outbox/: mod.rs
src/schema_history/: mod.rs
src/sink/: mod.rs
src/source/: helpers.rs  mariadb.rs  mod.rs  mysql.rs  parallel_snapshot.rs  postgres.rs  snapshot_progress.rs  snapshot_tracker.rs  snapshot_validator.rs  sqlserver.rs
src/testkit/: mod.rs
src/transform/: field_mapping.rs  filter_projection.rs  mask_hash.rs  mod.rs  outbox.rs  route.rs  unwrap.rs
src/wasm/: mod.rs  runtime.rs  transform.rs
tests/: checkpoint_file_integration.rs  compatibility_contract.rs  crash_simulation_integration.rs  data_loss_detection.rs  deterministic_replay_failure_fixtures.rs  deterministic_replay_golden_fixtures.rs  example_pg_to_stdout.rs  fault_injection_soak_matrix.rs  latency_evidence_common.rs  logging_structured.rs  mariadb_connection_integration.rs  mariadb_e2e_integration.rs  mysql_connection_integration.rs  mysql_handoff_integration.rs  mysql_latency_evidence.rs  mysql_snapshot_integration.rs  mysql_stream_integration.rs  mysql_version_matrix.rs  otel_metrics_integration.rs  otel_tracing_integration.rs  parallel_snapshot_stress_integration.rs  postgres_checkpoint_integration.rs  postgres_handoff_integration.rs  postgres_latency_evidence.rs  postgres_snapshot_integration.rs  postgres_stream_integration.rs  postgres_version_matrix.rs  process_crash_marker.rs  process_crash_worker.rs  runtime_health_states.rs  runtime_mariadb_process_crash_integration.rs  runtime_mysql_process_crash_integration.rs  runtime_postgres.rs  runtime_postgres_process_crash_integration.rs  runtime_sqlserver_process_crash_integration.rs  snapshot_resumable_integration.rs  snapshot_validator_integration.rs  sqlserver_connection_integration.rs  sqlserver_handoff_integration.rs  sqlserver_latency_evidence.rs  (+7 more)
xtask/: Cargo.toml
xtask/src/: lib.rs
(+41 files in other folders)
