[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
publish = false

[features]
default = []
tls = ["rustcdc/tls"]
postgres = ["rustcdc/postgres"]
mysql = ["rustcdc/mysql"]
sqlserver = ["rustcdc/sqlserver", "tls"]
insecure-test-overrides = ["rustcdc/insecure-test-overrides"]

[dependencies]
rustcdc = { path = "..", default-features = false }
tokio = { version = "1.48.0", features = ["macros", "rt", "time"] }
